--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -1375,16 +1375,34 @@ Constanta \texttt{CRYPTO\_IV\_LEN} provine din modulul de criptografie, prezenta
 Flasher-ul folosește de asemenea modulul \texttt{Crc} al bootloader-ului pentru a calcula codul polinomial atașat la finalul oricărui pachet.
 
 \section{Concluzii și dezvoltări ulterioare}
-TODO: mod de numire si codare consistenta, hungarian notation, cod simplu, modular, am atins scopurile
 
-TODO: alegerea unei aplicatii dintre mai multe
-TODO: evitarea folosirii unui script de linker pentru aplicatiile utilizator
-TODO: mesaje mai bune din bundler/flasher
-TODO: indicatie pe microcontroller ca bootloader-ul ruleaza!
-TODO: management al cheilor via bundler
-TODO: mesaje sugestive cu privite la erori in pachetele de status
-TODO: modulele, cum ar fi rb-ul, sunt singleton
-TODO: interfata pentru bundler/flasher - inca un motiv pt. scriere in C++
+Așadar în cele prezentate anterior am plecat de la ideea de a reduce costurile de dezvoltare a aplicațiilor embedded și de a îmbunătăți securitatea modului în care aceste aplicații sunt încărcate pe dispozitivele utilizatorilor și am ajuns la o colecție de trei aplicații, bootloader-ul, Flasher-ul și Bundler-ul. Prima fiind destinată dispozitivului embedded, iar cele două din urmă arhitecturilor x86 sau x64.
+
+Bootloaderul este o aplicație încărcată de către dezvoltator pe microcontroller și care nu poate fi înlocuită ușor de către utilizatorii acestuia.
+Rolul bootloader-ului este de a încărca la rândul său o altă aplicație pe microcontroller. Aplicația care face de fapt procesarea utilă pentru care a fost proiectat sistemul embedded.
+În urma procesului de bootloading ambele aplicații, atât bootloader-ul cât și aplicația utilizator, vor coexista în
+memoria flash a microcontroller-ului, conform unui memory map.
+
+Securitatea acestui bootloader este asigurată de algoritmul de criptare cu cheie simetrică AES (Rijndael), algoritm implementat în biblioteca mbedTLS.
+
+Sunt de părere că scopurile propuse au fost atinse prin codul modular și consistent scris în cadrul aplicațiilor dezvoltate în această lucrare. Se poate observa în secțiunea anterioară a lucrării că tot codul respectă notația ungurească\footnote{hungarian notation} pentru denumirea variabilelor și că formatarea codului este consistentă. De asemenea am încercat să documentez toate funcțiile din interfețele modulelor pentru a facilita reutilizarea acestor, lucru care s-a și întâmplat în momentul în care am scris utilitarele Flasher și Bundler.
+
+Totuși, deși bootloader-ul își face treaba pe a fost proiectat să o facă, există o serie de îmbunătățiri pe care le putem implementa în cadrul dezvoltărilor ulterioare.
+
+O primă astfel astfel de îmbunătățire este inspirată de bootloader-ele pentru sisteme desktop (de exemplu GRUB), aceasta ar consta în alegerea unei aplicații dintre câteva existente în memoria microcontroller-ului. În prezent bootloader-ul poate doar să încarce o singură aplicație în memoria flash. Totuși acestă funcționalitate nu are o implementare evidentă, deoarece utilizatorul va trebui să aleagă o aplicație, iar perifericele de intrare sunt limitate la sistemele embedded sau inexistente în anumite cazuri.
+
+Deoarece și perifericele de ieșire sunt limitate la anumite sisteme embedded, bootloader-ul ar trebui să își semnalizeze stările prin aprinderea anumitor LED-uri de stare. În cel mai rău caz ar trebui să indice faptul că rulează și că așteaptă trimiterea unei aplicații pe portul serial.
+
+O altă îmbunătățire, ceva mai importantă, ar fi găsirea unei modalități de a modifica în mod automat o aplicație utilizator să ruleze de la o anumita adresă în memorie. Îmbunătățirea aceasta ar duce la simplificarea procesului de dezvoltare a aplicațiilor pentru bootloader, scriptul de linker nefiind necesar în acest caz.
+
+În ceea ce privește protocolul de comunicație între bootloader și Flasher, acesta ar putea fi modificat să includă și mesaje de eroare în pachetele de tip \texttt{STATUS\_ERROR}. În mod curent cauza erorilor fiind necunoscută.
+
+În ceea ce privește cele două utilitare, consider că Bundler-ul poate primi o funcționalitate nouă de gestiune a cheilor de criptare, pentru a ști ce cheie de criptare este destinată cărui client. În cazul de față dezvoltatorul trebuie să facă gestiunea lor manual, neexistând un sistem care să îi vină în ajutor. De asemenea faptul că cele două utilitare sunt aplicații în linia de comanda, ar putea fi un impediment pentru utilizatorii mai neexperimentați, așadar o altă îmbunătățire de bun augur ar fi adăugarea unei interfețe grafice celor două utilitare. Fiind scrise in C++, interfața se poate adăuga relativ ușor folosind un set de biblioteci precum Qt\footnote{https://www.qt.io/developers/}.
+
+Acestea fiind zise, bootloader-ul, împreună cu Bundler-ul și Flasher-ul pot fi folosite de către un dezvoltator pentru a facilita trimiterea de versiuni noi ale unei aplicații spre client. Fără a fi necesar ca utilizatorul să dispună de hardware special pentru încărcarea acestor noi aplicații pe microcontroller.
+
+%TODO: mesaje mai bune din bundler/flasher
+%TODO: modulele, cum ar fi rb-ul, sunt "singleton"
 
 \newpage
 \bibliographystyle{plain}
