place floats inside their section

--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -28,6 +28,9 @@
 
 \usepackage{multirow}
 
+% avoid floats moving outside the sections
+\usepackage[section]{placeins}
+
 \author{Barbu Paul - Gheorghe}
 
 %TODO: coperta
