added "indrumator" and the slides with their images

--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -68,7 +68,7 @@ programabile
 \raggedright
 Conducător ştiinţific: Conf. dr. ing. Morariu Daniel \\
 %TODO: razvan?
-Îndrumător: Conf. dr. ing. Morariu Daniel
+Îndrumător: Răzvan Mărcuș
 }
 \vfill
 
