modified the cover and the title page and added the missing resources for the presentations

--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -67,17 +67,14 @@ programabile
 {
 \raggedright
 Conducător ştiinţific: Conf. dr. ing. Morariu Daniel \\
-%TODO: razvan?
 Îndrumător: Răzvan Mărcuș
 }
 \vfill
 
 {
 \raggedright
-\hspace*{160pt}Absolvent: \\
-\hspace*{160pt}Barbu Paul - Gheorghe\\
-\hspace*{160pt}Specializarea:\\
-\hspace*{160pt}Calculatoare și Tehnologia Informației
+\hspace*{270pt}Absolvent: Barbu Paul - Gheorghe\\
+\hspace*{270pt}Specializarea: Calculatoare
 }
 
 \end{titlepage}
