--- a/coperta Barbu Paul - Gheorghe.tex
+++ b/coperta Barbu Paul - Gheorghe.tex
@@ -77,11 +77,9 @@ Conducător ştiinţific: Conf. dr. ing. Morariu Daniel \\
 \vfill
 
 {
-%\begin{center}
-
-\raggedright
-\hspace*{270pt}- Sibiu, 2017 -
-%\end{center}
+\begin{center}
+- Sibiu, 2017 -
+\end{center}
 }
 \end{titlepage}
 
