--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,34 @@
+@Misc{enerdata,
+    author = {Enerdata},
+    title = {Electricity domestic consumption},
+    month = {December},
+    year = {2018},
+    note = {\url{https://yearbook.enerdata.net/electricity/electricity-domestic-consumption-data.html}, Accessed December 2018},
+}
+@article{bouzerdoum,
+    author = {Bouzerdoum, M and Mellit, Adel and Massi Pavan, Alessandro},
+    year = {2013},
+    month = {12},
+    pages = {226–235},
+    title = {A hybrid model (SARIMA–SVM) for short-term power forecasting of a small-scale grid-connected photovoltaic plant},
+    volume = {98},
+    journal = {Solar Energy},
+    doi = {10.1016/j.solener.2013.10.002}
+}
+@book{fpp2,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Forecasting: Principles and Practice, 2nd edition},
+    date = {December 2018},
+}
+@inproceedings{Rdesign,
+    author = {Morandat, Floréal and Hill, Brandon and Osvald, Leo and Vitek, Jan},
+    year = {2012},
+    month = {06},
+    pages = {104-131},
+    title = {Evaluating the Design of the R Language - Objects and Functions for Data Analysis},
+    volume = {7313},
+    doi = {10.1007/978-3-642-31057-7_6}
+}
 @Misc{retarget,
 author = {Erich Styger},
 title = {printf() and scanf() with {GNU ARM Libraries}},
